--- a/Copy_of_PHSXlab_plotting_template.ipynb
+++ b/Copy_of_PHSXlab_plotting_template.ipynb
@@ -50,7 +50,7 @@
       ],
       "source": [
         "#PHSX 216 & 218 plotting code\n",
-        "#Brianna Beller\n",
+        "#Nathan Johnson\n",
         "#Updated September 2023\n",
         "\n",
         "#import packages and libraries, assign shortcut names\n",
